# api

./: .gitignore  Dockerfile  README.md  __init__.py  config.toml  docker-compose.yml  function.py  main.py  pyproject.toml  requirements.txt  schema.py  script.py  start.sh  t2.py  test.py  u.txt  win.ps1
.github/workflows/: codeql.yml  docker-publish.yml  qodana_code_quality.yml
api/v1/file/: file.py
api/v1/img/: sfw.py
api/v1/ipfs/: ipfs.py
api/v1/qloat/: qaa.py
api/v1/school/: school.py
src/: __init__.py  download.html  func2.py  function.py  schema.py
static/: index.html  style.css
v1/: __init__.py
v1/corche/: corche.py
v1/file/: 1.py  file.py
v1/h-k/: h-k.py
v1/h_k/: h_k.py
v1/img/: sfw.py
v1/ipfs/: ipfs.py
v1/qloat/: qaa.py
v1/school/: school.py
v2/: __init__.py
v2/cipher/: cipher.py
v2/file/: file.py
v2/folder/: folder.py
v2/school/: school.py
