[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp[speedups]>=3.11.16",
    "black>=25.1.0",
    "fastapi[all]>=0.115.12",
    "hypercorn>=0.17.3",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "orjson>=3.10.16",
    "pydantic>=2.11.2",
    "pylint>=3.3.6",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "ruff>=0.11.6",
    "starlette>=0.46.1",
    "toml>=0.10.2",
    "yt-dlp>=2025.3.31",
]
